Make BaseFramework production-grade
Turn the library skeleton into a self-configuring, well-tested Spring Boot
starter for microservices.

Framework:
- Add Spring Boot auto-configuration (AutoConfiguration.imports) for security,
  web/exception handling, JPA auditing, OpenAPI and opt-in Kafka; consumers no
  longer need manual @Import or component scanning.
- BaseEntity: auditing (createdAt/updatedAt), @Version optimistic locking and
  id-based equals/hashCode; now abstract.
- GlobalExceptionHandler returns RFC 7807 ProblemDetail and handles 404
  (ResourceNotFoundException), validation (400 + per-field errors) and 500.
- GenericCrudController: 201+Location, real 404, @Valid bodies, paginated /page.
- GenericCrudService: @Transactional, existence checks, getById/findAll(Pageable).
- SecurityConfig migrated to the Spring Security 6 lambda DSL; KafkaConfig made
  opt-in; new OpenApiConfig (Swagger UI).

Build & project hygiene:
- pom.xml: versions managed by the Spring Boot BOM, -parameters, JaCoCo, semver
  version 1.0.0-SNAPSHOT; add validation and springdoc dependencies.
- Add Maven Wrapper, GitHub Actions CI, LICENSE (MIT), CHANGELOG, CONTRIBUTING
  and configuration-property metadata.
- Resolve dependencies from Maven Central only via project-local
  .mvn/settings.xml (wired through .mvn/maven.config); no corporate repository.
- Rewrite README and sample docs; expand tests (20 unit/slice/auto-config tests
  plus sample 404/validation coverage).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>